sumo/tests/duarouter/errors/false_net/options.duarouter
--net-file=%SUMO_DIST%\tests\duarouter\errors\false_net\increasing_trips.net.xml --trip-defs=%SUMO_DIST%\tests\duarouter\errors\false_net\increasing_trips.trips.xml -o routes.rou.xml
